# postgres-cdc

logicalReplication/: docker-compose.yml  init-publisher.sql  init-subscriber.sql
logicalReplication/implementation/: 1_create_publication.sql  2_create_subscription.sql  3_check_replication.sql  4_cdc.sql
queryBased/: docker-compose.yml  query.sql  users.sql
queryBased/cdc-python/: pyproject.toml
queryBased/cdc-python/src/cdc_python/: main.py
triggersBased/: capture_changes_function.sql  create_trigger.sql  uesrs.sql  users_cdc.sql
