[project]
name = "cdc-python"
version = "0.1.0"
description = ""
authors = [
    {name = "Maxim",email = "maximdevtool@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "psycopg (>=3.2.10,<4.0.0)",
    "schedule (>=1.2.2,<2.0.0)"
]

[tool.poetry]
packages = [{include = "cdc_python", from = "src"}]

[tool.poetry.scripts]
run-pipeline = "cdc_python.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
